--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -12,8 +12,10 @@ concurrency:
 
 jobs:
   sanity-tests:
-    if: (github.event_name == 'pull_request' && github.event.action == 'ready_for_review') ||
-      (github.event_name == 'pull_request_review' && github.event.review.state == 'approved')
+    if: |
+      (github.event_name == 'pull_request' && github.event.action == 'ready_for_review') ||
+      (github.event_name == 'pull_request_review' && github.event.review.state == 'approved') ||
+      (github.event_name == 'push' && github.ref == 'refs/heads/main')
     runs-on: tools-runner
 
     steps:
