--- a/modules/response-actions/templates/lambda-stackset.yaml
+++ b/modules/response-actions/templates/lambda-stackset.yaml
@@ -5,9 +5,9 @@ Parameters:
   ResourceName:
     Type: String
     Description: Base name for all resources
-  S3Bucket:
+  S3BucketPrefix:
     Type: String
-    Description: S3 bucket containing Lambda deployment packages
+    Description: Prefix for regional S3 buckets containing Lambda deployment packages (bucket name will be {prefix}-{region})
   ApiBaseUrl:
     Type: String
     Description: API base URL for Lambda functions
@@ -96,7 +96,7 @@ Resources:
       Handler: app.index.handler
       Role: !Ref QuarantineUserRoleArn
       Code:
-        S3Bucket: !Ref S3Bucket
+        S3Bucket: !Sub '${S3BucketPrefix}-${AWS::Region}'
         S3Key: quarantine_user.zip
       Timeout: 300
       MemorySize: 128
@@ -119,7 +119,7 @@ Resources:
       Handler: app.index.handler
       Role: !Ref FetchCloudLogsRoleArn
       Code:
-        S3Bucket: !Ref S3Bucket
+        S3Bucket: !Sub '${S3BucketPrefix}-${AWS::Region}'
         S3Key: fetch_cloud_logs.zip
       Timeout: 300
       MemorySize: 128
@@ -142,7 +142,7 @@ Resources:
       Handler: app.index.handler
       Role: !Ref RemovePolicyRoleArn
       Code:
-        S3Bucket: !Ref S3Bucket
+        S3Bucket: !Sub '${S3BucketPrefix}-${AWS::Region}'
         S3Key: remove_policy.zip
       Timeout: 300
       MemorySize: 128
@@ -165,7 +165,7 @@ Resources:
       Handler: app.index.handler
       Role: !Ref ConfigureResourceAccessRoleArn
       Code:
-        S3Bucket: !Ref S3Bucket
+        S3Bucket: !Sub '${S3BucketPrefix}-${AWS::Region}'
         S3Key: configure_resource_access.zip
       Timeout: 300
       MemorySize: 128
@@ -188,7 +188,7 @@ Resources:
       Handler: app.index.handler
       Role: !Ref CreateVolumeSnapshotsRoleArn
       Code:
-        S3Bucket: !Ref S3Bucket
+        S3Bucket: !Sub '${S3BucketPrefix}-${AWS::Region}'
         S3Key: create_volume_snapshot.zip
       Timeout: 300
       MemorySize: 128
@@ -211,7 +211,7 @@ Resources:
       Handler: app.index.handler
       Role: !Ref DeleteVolumeSnapshotsRoleArn
       Code:
-        S3Bucket: !Ref S3Bucket
+        S3Bucket: !Sub '${S3BucketPrefix}-${AWS::Region}'
         S3Key: delete_volume_snapshot.zip
       Timeout: 300
       MemorySize: 128
