--- a/modules/response-actions/policies/configure-resource-access-policy.json
+++ b/modules/response-actions/policies/configure-resource-access-policy.json
@@ -23,7 +23,7 @@
     {
       "Effect": "Allow",
       "Action": "sts:AssumeRole",
-      "Resource": "arn:aws:iam::*:role/ResponseActionsConfigureAccessDelegateRole"
+      "Resource": "arn:aws:iam::*:role/${role_name}"
     }
   ]
 }
